deployments/media/emby/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
  labels:
    app: emby
spec:
  ports:
    - name: frontend
      port: 8096
      protocol: TCP
      targetPort: frontend
  selector:
    app: emby
