deployments/media/emby/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: emby
  namespace: media
  labels:
    app: emby
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: bjws.nl
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    
spec:
  rules:
  - host: emby.bjws.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: emby
          servicePort: frontend

  tls:
  - secretName: tls.emby
    hosts:
    - emby.bjws.nl
